fixed use of canvas.resize in window resize event listener

--- a/index.html
+++ b/index.html
@@ -3,19 +3,16 @@
 <html>
 
   <head>
-
     <title>Ball</title>
     <link rel="stylesheet" href="ball.css">
-
-    <scipt src="ball.js"></script>
-
+    <script src="ball.js"></script>
   </head>
 
   <body>
-
-    <canvas id="canvas">
-    </canvas>
-
+    <div>
+      <canvas id="canvas">
+      </canvas>
+    </div>
   </body>
 
 </html>
