--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <head>
     <title>Ball</title>
     <link rel="stylesheet" href="ball.css">
+    <script src="events.js"></script>
     <script src="ball.js"></script>
   </head>
 
