loop working well

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <head>
     <title>Ball</title>
     <link rel="stylesheet" href="ball.css">
-    <script src="events.js"></script>
+    <script src="loop.js"></script>
     <script src="ball.js"></script>
   </head>
 
