ball rolling on the ground pretty nicely

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="main.js"></script>
     <script src="loop.js"></script>
     <script src="ball.js"></script>
+    <script src="line.js"></script>
   </head>
 
   <body>
