--- a/paint.html
+++ b/paint.html
@@ -11,7 +11,7 @@
 
   <body>
     <div>
-      <canvas id="canvas">
+      <canvas id="canvas" width="1400" height="800">
       </canvas>
     </div>
   </body>
