reorg to allow for build process

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <head>
     <title>Ball</title>
     <link rel="stylesheet" href="ball.css">
+    <script src="lib/loop.js"></script>
+    <script src="lib/color.js"></script>
+    <script src="lib/ball.js"></script>
+    <script src="lib/line.js"></script>
     <script src="main.js"></script>
-    <script src="loop.js"></script>
-    <script src="color.js"></script>
-    <script src="ball.js"></script>
-    <script src="line.js"></script>
   </head>
 
   <body>
