--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
   <head>
     <title>Ball</title>
-    <link rel="stylesheet" href="ball.css">
+    <link rel="stylesheet" href="index.css">
     <script src="lib/loop.js"></script>
     <script src="lib/color.js"></script>
     <script src="lib/ball.js"></script>
